Fixed BUG #14554: mysqldump does not separate "ROW" and trigger  statement for tables created in the IGNORE_SPACE sql mode.